# QtRedis

./: CMakeLists.txt  QtRedis  QtRedis.pri  QtRedis.pro  qtredis.cpp  qtredis.h  reader.cpp  reader.h  readme.md
test/: CMakeLists.txt  main.cpp  test.cpp  test.h  test.pro
