CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (QtRedis)

FIND_PACKAGE (Qt4 REQUIRED COMPONENTS QtCore QtNetwork)
IF (QT4_FOUND)
    INCLUDE (${QT_USE_FILE})
ENDIF (QT4_FOUND)

QT4_WRAP_CPP (MOC qtredis.h reader.h)

ADD_LIBRARY (QtRedis qtredis.cpp reader.cpp ${MOC})
TARGET_LINK_LIBRARIES (QtRedis ${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARY})

ADD_SUBDIRECTORY (test)
